# transcribe-diarize

./: .env.example  .gitignore  Makefile  README.md  check.py  pyproject.toml  requirements.txt  transcribe_diarize
asr_cli/: __init__.py  audio.py  cli.py  devices.py  diarization.py  export.py  speakers.py  utils.py  whisper_infer.py
tests/: test_diarize_cache_fallback.py  test_pyannote_guard.py  test_smoke_cli.py  test_whisper_infer.py
