[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asr-mps"
version = "0.1.0"
description = "CLI for Whisper transcription with pyannote diarization."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "ASR with Diarisation CLI", email = "clement.ruffinoni@outlook.com" },
]
dependencies = [
  "torch>=2.0.0",
  "torchaudio>=2.0.0",
  "openai-whisper>=20231117",
  "pyannote.audio>=3.1.1",
  "huggingface_hub>=0.20.0",
  "python-dotenv>=1.0.0",
  "click>=8.1",
  "rich>=13.0",
]

[project.scripts]
asr-mps = "asr_cli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["asr_cli"]
